# kubenumerate

./: .flake8  .gitignore  CI_CD_SUMMARY.md  Dockerfile  ExtensiveRoleCheck.py  MANIFEST.in  README.md  VERSION_MANAGEMENT.md  demo_version.py  formatter.py  kubenumerate.py  lol.py  pyproject.toml  requirements.txt  setup.py  summary_table.py  test_issues_dict.txt  test_summary_table_logic.py  version.py
.github/workflows/: ci-cd.yml  ci.yml  publish.yml  release.yml  version-bump.yml
src/ai_integration/: ai_support.py  ai_test.py
tests/: __init__.py  test_version.py
